--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -5,7 +5,7 @@
 }
 
 .wrapper {
-    max-width: 700px;
+    max-width: 900px;
     margin: 0 auto;
     padding: 0 20px;
     border: 1px solid black;
@@ -25,36 +25,227 @@
     border: 1px solid black;
 }
 
-.open {
+.open-hours {
     border: 1px solid black;
     // flex-grow: 1;
     flex-basis: 100%;
+    margin-top: 10px;
+    background-color: $color-main;
+    h3 {
+        color: $color-light;
+        font-weight: bold;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    h4 {
+        color: $color-light;
+        font-weight: bold;
+        text-align: center;
+        text-transform: uppercase;
+    }
 }
 
-.tile {
+.tile1 {
     border: 1px solid black;
-    // flex-grow: 2;
-    flex-basis: 50%;
+    background-image: url(../../images/assets/pizza-1.jpg);
+    text-align: center;
+    height: 30vh;
+    position: relative;
+    h3 {
+        color: $color-light;
+        text-transform: uppercase;
+        font-weight: bold;
+        line-height: 19vh;
+        font-size: 40px;
+        transition: 0.5s linear;
+    }
+    p {
+        opacity: 0;
+        position: absolute;
+        top: 106%;
+        left: 50%;
+        transform: translate(-50%, -103%);
+        color: $color-light;
+        transition: 0.5s linear;
+    }
 }
 
-a {
+.tile1:hover p {
+    opacity: 1;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.tile1:hover h3 {
+    display: block;
+    line-height: 4vh;
+}
+
+.tile2 {
+    border: 1px solid black;
+    background-image: url(../../images/assets/pizza-2.jpg);
+    text-align: center;
+    height: 30vh;
+    position: relative;
+    h3 {
+        color: $color-light;
+        text-transform: uppercase;
+        font-weight: bold;
+        line-height: 19vh;
+        transition: 0.5s linear;
+        font-size: 40px;
+    }
+    p {
+        opacity: 0;
+        position: absolute;
+        top: 106%;
+        left: 50%;
+        transform: translate(-50%, -210%);
+        color: $color-light;
+        transition: 0.5s linear;
+    }
+}
+
+.tile2:hover p {
+    opacity: 1;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.tile2:hover h3 {
+    display: block;
+    line-height: 4vh;
+}
+
+.links {
     text-decoration: none;
+    flex-basis: 49%;
+    display: block;
 }
 
-.cards {
+.gallery {
+    // min-height: 100vh;
+    overflow: hidden;
+    width: 100%;
+    padding: 1rem;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
     flex-direction: row;
-    width: 960px;
-    border: 1px solid black;
+    flex-wrap: wrap;
+    a {
+        flex-basis: 100%;
+    }
 }
 
-.cards img {
-    margin: 10px;
-    border: 3px solid #000;
-    box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.3);
-    flex-basis: 25%;
-    width: 280px;
-    height: 280px;
+.image {
+    overflow: hidden;
+    height: 300px;
+    // width: 350px;
+    position: relative;
+    cursor: pointer;
+    margin: 15px 15px;
+    box-shadow: 0 0 25px 1px rgba(0, 0, 0, .3);
+    transition: .5s;
+    background-color: #555;
+    flex-basis: 29%;
+}
+
+.image:after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    height: 500px;
+    transform: translate(-140%, -50%);
+    background-color: rgba(54, 216, 116, 0.8);
+    border-radius: 50%;
+    transition: .8s;
+}
+
+.image:hover:after {
+    transform: translate(-50%, -50%);
+}
+
+.image:hover img {
+    transform: translate(-50%, -50%) scale(1.3) rotate(20deg);
+}
+
+img {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .8s;
+}
+
+.home-icon {
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-2000px, -50%);
+    color: #fff;
+    transition: .8s;
+    transition-timing-function: ease-in;
+}
+
+.image:hover i {
+    transform: translate(-50%, -50%);
+    transition-timing-function: ease;
+}
+
+//slider
+.slider-section {
+    border: 1px black solid;
+    height: 35vh;
+    width: 80%;
+}
+
+.box-1,
+.box-2,
+.box-3 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    padding: 10px;
+}
+
+.box-1 .photo,
+.box-2 .photo,
+.box-3 .photo {
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS9lnfz7ME7LKdw1e33GkglSINFlxS_aQeCRSrgdpfzYKavspE6&usqp=CAU);
+    height: 200px;
+    flex-basis: 30%;
+    width: 200px;
+}
+
+.box-2 .photo {
+    background-image: url(https://letslivefast.files.wordpress.com/2014/07/elizabetholsenflaunt_hunterandgatti6.jpg?resize=200%2C200);
+}
+
+.box-3 .photo {
+    background-image: url(https://krytykkulinarny.pl/wp-content/uploads/2014/04/magda-gessler-fot-youtube.jpg);
+}
+
+.box-1 .description,
+.box-2 .description,
+.box-3 .description {
+    flex-basis: 70%;
+    padding: 10px;
+}
+
+.off-slide {
+    display: none;
+}
+
+.active-slide {
+    display: flex;
 }
